# tree-sitter-toon

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  biome.json  grammar.js  indent_test_example.toon  package.json  pyproject.toml  test_delimiter_context.toon  tree-sitter.json
.github/workflows/: README.md  build-wheels.yml  ci.yml  publish.yml  release.yml
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: mixed.txt  primitives.txt
test/corpus/arrays/: list.txt
